<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/materialFragment">

    <fragment
        android:id="@+id/materialFragment"
        android:name="com.example.responsabilidad.ui.material.MaterialFragment"
        android:label="@string/titulo_material"
        tools:layout="@layout/fragment_material" />

    <fragment
        android:id="@+id/foroFragment"
        android:name="com.example.responsabilidad.ui.foro.ForoFragment"
        android:label="@string/titulo_foro"
        tools:layout="@layout/fragment_foro" />

    <fragment
        android:id="@+id/pruebaAptitudFragment"
        android:name="com.example.responsabilidad.ui.foro.PruebaAptitudFragment"
        android:label="@string/titulo_prueba_aptitud"
        tools:layout="@layout/fragment_prueba_aptitud" />

    <fragment
        android:id="@+id/nosotrosFragment"
        android:name="com.example.responsabilidad.ui.nosotros.NosotrosFragment"
        android:label="@string/titulo_nosotros"
        tools:layout="@layout/fragment_nosotros" />

    <fragment
        android:id="@+id/adminFragment"
        android:name="com.example.responsabilidad.ui.admin.AdminFragment"
        android:label="@string/titulo_admin"
        tools:layout="@layout/fragment_admin" />

</navigation>